Allow override of blog and user blog pages.
Allow override of poll page.
#596450 by Scott Reynolds: Provide an ajax command response to reset the modal to the 'loading' state.
#554678: Do not allow % or ! by itself as part of a path, as that breaks arguments.
#599428: Enable and Disable variant buttons led to "Operation trail does not exist."

ctools 6.x-1.0
==============

#534570: Fix _ and - not recognized in for context keywords.
#535744 by Senpai: Rename "post" to "node" in various nid selectors.
Make sure that tasks that will not override existing overrides refuse to enable and provide an error message saying why.
#540750 by manuee: User picture was not available despite having a .inc file.
#537184 by stephthegeek: CSS tweaks to fix heights on operations.
#471024: Stop preventing exposed-view-in-block blocks from showing up as content panes.
#483170: Link paths in page list if they have sensible destinations.
#406284: Allow items with the user uid argument to be used as a normal menu item.
#534504: Selection rules were not being saved when set up via during variant add.
#528392 by markus_petrux: Explicit NOT NULL settings in schema during install.
#348323 by neclimdul: Allow plugins to have classes and auto build parent chains.
#478542 by nickl: Add "attr" command to ajax framework.
#495240 by mikl: Blob handling for pgsql.
#531936: Cache handling on contexts was spotty and could cause random errors.
#545540 by Roger López: Add 5 page elements as available panes for using Panels as your primary page layout: breadcrumb, page title, messages, tabs and help box.
#537776 by rfay: CTools Plugin Example module to help guide people in making plugins.
#552020: Show the administrative description on page manager edit forms.
#549380 by Nick Lewis: DX improvements to the multistep wizard.

ctools 6.x-1.0-rc1
==================

#510968: Arguments needed to be recalulculated when path changed in page task.