@@ -93,6 +93,34 @@ function ctools_object_cache_test($obj, $name) {
 }
 
 /**
+ * Get the cache status of a group of objects.
+ *
+ * This is useful for displaying lock status when listing a number of objects
+ * an an administration UI.
+ *
+ * @param $obj
+ *   A 32 character or less string to define what kind of object is being
+ *   stored; primarily this is used to prevent collisions.
+ * @param $names
+ *   An array of names of objects
+ *
+ * @return
+ *   An array of objects containing the UID and updated date for each name found.
+ */
+function ctools_object_cache_test_objects($obj, $names) {
+  $placeholders = db_placeholders($names, 'varchar');
+  $args = array_merge(array($obj), $names);
+  $result = db_query("SELECT c.name, s.uid, c.updated FROM {ctools_object_cache} c INNER JOIN {sessions}  s ON c.sid = s.sid WHERE c.obj = '%s' AND c.name IN ($placeholders) ORDER BY c.updated ASC", $args);
+
+  $return = array();
+  while ($test = db_fetch_object($result)) {
+    $return[$test->name] = $test;
+  }
+
+  return $return;
+}
+
+/**
  * Remove an object from the non-volatile ctools cache for all session IDs.
  *
  * This is useful for clearing a lock.
